[project]
name = "pypromethica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "cachetools>=6.1.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
]
